# MemeRadar

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  api.Dockerfile  bot.Dockerfile  docker-compose.yml  pyproject.toml  threads.Dockerfile
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_meme_image_data.py  0003_events.py  0004_users.py  0005_meme_uploaded_by.py  0006_gallery.py  0007_vector_index.py  0008_client_errors.py  0009_bug_reports.py  0010_textless_samples.py  0011_favorites.py  0012_perf_indexes.py
console/: README.md  admin.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
console/public/: manifest.webmanifest  robots.txt  sitemap.xml
console/src/: App.tsx  index.css  main.tsx  types.ts
console/src/components/: AdminGate.tsx  BugReporter.tsx  BugReportsView.tsx  ChatFeedbackView.tsx  ClientErrorsView.tsx  ConversationEditor.tsx  DashboardView.tsx  DebugPanel.tsx  ErrorBoundary.tsx  FavoriteButton.tsx  HistoryView.tsx  LibraryView.tsx  MemeImage.tsx  ParamsPanel.tsx  RadarLoading.tsx  ReportView.tsx  ReportsView.tsx  ResultCard.tsx  ReviewView.tsx  SettingsView.tsx  ShareButton.tsx  UploadView.tsx
console/src/lib/: api.test.ts  api.ts  auth.ts  breadcrumbs.test.ts  breadcrumbs.ts  clientId.test.ts  clientId.ts  examples.ts  files.test.ts  files.ts  nickname.ts  parseConversation.test.ts  parseConversation.ts  router.ts  settings.test.ts  settings.ts  upload.test.ts  uploadQueue.test.ts  uploadQueue.ts
console/src/mobile/: ChatScreen.tsx  Chip.tsx  ContributeModal.tsx  ExploreScreen.tsx  FavoritesScreen.tsx  GalleryDetail.tsx  MobileApp.tsx  SettingsScreen.tsx  main.tsx
docs/: 00-overview.md  01-architecture.md  02-data-ingestion.md  03-meme-understanding.md  04-intent-matching.md  05-demo-console.md  06-risks-and-challenges.md  07-seed-collection.md  README.md  TASKS.md  deployment-zeabur.md
docs/outreach/: dcard-email.md  memes-tw-email.md  reddit-api-application.md
memeradar/: __init__.py
memeradar/api/: __init__.py  __main__.py  app.py  google_auth.py  pipeline.py  ratelimit.py  schemas.py
memeradar/bot/: app.py  threads.py
memeradar/ingestion/: __init__.py  base.py  coverage.py  dedup.py  memes_tw.py  pipeline.py  reddit.py  rules.py  seed_import.py
memeradar/matching/: __init__.py  cli.py  intent.py  rerank.py  retrieval.py  screenshot.py  search.py
memeradar/shared/: __init__.py  auth.py  cache.py  config.py  db.py  hotness.py  labels.py  models.py  reporting.py  repository.py  storage.py  taxonomy.py
memeradar/shared/data/: taxonomy.yaml
memeradar/shared/migrations/: 0001_initial.sql  0002_crawl_state.sql  0003_dedup_reviews.sql  0004_crawl_health.sql  0005_hotness_decay.sql  0006_feedback_unique.sql  0007_log_timings.sql  0008_log_context.sql  0009_vlm_calls.sql  0010_tasks.sql  (+1 more)
memeradar/understanding/: __init__.py  annotator.py  classifier.py  claude_vlm.py  embedding.py  image_embed.py  nvclip.py  nvidia_vlm.py  ocr.py  opponent.py  retrieval_doc.py
scripts/: crawl_memes_tw.py  migrate_sqlite_to_pg.py  reannotate_active_unannotated.py  smoke_ocr_nvclip.py  telegram_meme_bot.py  verify_local_annotate.py
tests/: conftest.py  test_annotator.py  test_api.py  test_auth.py  test_cache.py  test_classifier.py  test_claude_vlm.py  test_config.py  test_coverage.py  test_db.py  test_dedup.py  test_embedding.py  test_events.py  test_fast_pipeline.py  test_gallery.py  test_hotness.py  test_image_embed.py  test_intent.py  test_memes_tw.py  test_nvclip.py  test_nvidia_vlm.py  test_ocr.py  test_opponent.py  test_pipeline.py  test_query_cli.py  test_ratelimit.py  test_reddit_adapter.py  test_reporting.py  test_rerank.py  test_retrieval.py  test_rules.py  test_screenshot.py  test_search.py  test_seed_import.py  test_settings.py  test_tasks.py  test_taxonomy.py  test_telegram_bot.py  test_threads_bot.py
