[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memeradar"
version = "0.1.0"
description = "AI 梗圖回應推薦系統：根據對話上下文推薦適合回覆的梗圖"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["memeradar"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
