[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memeradar"
version = "0.1.0"
description = "AI 梗圖回應推薦系統：根據對話上下文推薦適合回覆的梗圖"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "anthropic>=0.116",
    "boto3>=1.34",
    "fastapi>=0.110",
    "google-auth>=2.28",
    "httpx>=0.27",
    "imagehash>=4.3",
    "openai>=1.6",
    "pyjwt>=2.8",
    "pgvector>=0.3",
    "pillow>=10.0",
    "psycopg[binary]>=3.1",
    "psycopg_pool>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "requests>=2.31",  # google.auth.transport.requests 需要（google-auth 不會自動帶）
    "uvicorn>=0.29",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "ruff>=0.4",
    # 測試用完整 Postgres：自動起 pgvector 容器（需本機 Docker）
    "testcontainers[postgres]>=4.0",
]
# 本地 embedding（BGE-M3）：含 torch 等重依賴，首次載入模型另需下載約 2.3GB 權重
local-embedding = [
    "sentence-transformers>=3.0",
]
# 爬蟲：Reddit 官方 OAuth API（公開 .json 客戶端不需要此 extras）
crawler = [
    "praw>=7.7",
]

[tool.hatch.build.targets.wheel]
packages = ["memeradar"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI 的 Depends() 慣用法（B008 已知誤報）
extend-immutable-calls = ["fastapi.Depends"]

[tool.ruff.lint.per-file-ignores]
# 含 LLM prompt 的模組：prompt 為自然語言內容，中文長行不受程式行寬限制
"memeradar/understanding/annotator.py" = ["E501"]
"memeradar/understanding/opponent.py" = ["E501"]
"memeradar/matching/intent.py" = ["E501"]
"memeradar/matching/rerank.py" = ["E501"]
"memeradar/matching/screenshot.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    # 第三方（starlette/httpx 版本組合）的棄用警告，非本專案程式碼
    "ignore::DeprecationWarning:fastapi.testclient",
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
